--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ main {
 }
 
 .actividad {
-  width: 50%;
+  width: 40%;
   display: grid;
   grid-template-columns: repeat(2, 35% 65%);
   border-radius: 5px;
@@ -154,16 +154,16 @@ main {
   align-items: center;
   margin: 7%;
   margin-right: 0;
-  margin-left: 14%;
+  margin-left: 24%;
   width: 100px;
   height: 100px;
-  margin-right: 2%;
   border-radius: 50%;
   box-shadow: 1px 1px 3px rgba(0, 1, 2, 0.7);
 }
 
 .actividad > #datos {
   margin: 5%;
+  margin-left: 0;
   display: flex;
   flex-flow: column;
   box-shadow: inset 0 0 rgba(0, 1, 2, 0.7);
